--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   google_maps_flutter: ^2.3.1
   geolocator: ^9.0.2
   geocoding: ^2.1.0
+  uuid: ^3.0.7
+  http: ^1.1.0
+  custom_info_window: ^1.0.1
 
 dev_dependencies:
   flutter_test:
@@ -62,8 +65,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
